Dummy_Package_for_scratch_org/main/default/objects/JobTemplate__c/JobTemplate__c.object-meta.xml
<CustomObject>
    <label>Job Template</label>
    <nameField>
        <label>Job Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>