Dummy_Package_for_scratch_org/main/default/objects/JobTemplate__c/fields/ApiName__c.field-meta.xml
<CustomField>
    <fullName>ApiName__c</fullName>
    <externalId>true</externalId>
    <label>API Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>