Dummy_Package_for_scratch_org/main/default/objects/JobTemplate__c/fields/VolumeOptions__c.field-meta.xml
<CustomField>
    <fullName>VolumeOptions__c</fullName>
    <inlineHelpText>A JSON containing transaction and volume options</inlineHelpText>
    <label>VolumeOptions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>