Dummy_Package_for_scratch_org/main/default/objects/JobTemplate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Version__c</columns>
    <columns>Type__c</columns>
    <columns>ApiName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>